--- a/public/material/css/ohoquote.css
+++ b/public/material/css/ohoquote.css
@@ -1,21 +1,27 @@
 /* oc stylesheet  starts*/
-.quote-overlay
-{
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 10px;;
-  margin:5%;
-  padding:5%;
-  color:white;
-  
-}
-.quote-bg
-{
-  -webkit-background-size: cover!important;
-  -moz-background-size: cover!important;
-  -o-background-size: cover!important;
-  background-size: cover!important;
 
+.quote-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    ;
+    margin: 5%;
+    padding: 5%;
+    color: white;
 }
+
+.quote-bg {
+    -webkit-background-size: cover!important;
+    -moz-background-size: cover!important;
+    -o-background-size: cover!important;
+    background-size: cover!important;
+}
+
+.page-link {
+    color: white;
+}
+
+
 /* oc stylesheet  starts*/
+
 
 /* Experimental Sandbox Starts From Below */
